--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#DEB887</color>
     <color name="colorPrimaryDark">#654321</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#8b0000</color>
 </resources>
