--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -12,9 +12,10 @@
         android:layout_gravity="center"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         card_view:cardCornerRadius="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,47 +27,56 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:background="#001C4A5B"
-                android:src="@android:drawable/ic_delete"
                 android:scaleX=".5"
-                android:scaleY=".5"/>
+                android:scaleY=".5"
+                android:src="@android:drawable/ic_delete" />
 
             <ImageView
                 android:id="@+id/bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:scaleType="fitXY"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="30dp"
-                android:src="@drawable/no_other_pub_logo">
-            </ImageView>
+                android:scaleType="fitXY"
+                android:src="@drawable/no_other_pub_logo"></ImageView>
 
-            <LinearLayout
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginTop="12dp"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/bar_name"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:text="Bar Name" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/punches_remaining"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_marginStart="30dp"-->
+<!--                    android:text="Punches" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/reward"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_marginStart="30dp"-->
+<!--                    android:text="Reward" />-->
+
+<!--            </LinearLayout>-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/punches_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/bar_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Bar Name" />
-                <TextView
-                    android:id="@+id/punches_remaining"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="30dp"
-                    android:text="Punches" />
-                <TextView
-                    android:id="@+id/reward"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="30dp"
-                    android:text="Reward" />
-
-            </LinearLayout>
+                android:layout_marginTop="10dp">
+            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
