Sprint 5, Add rewards activity

--- a/app/src/main/res/layout/admin_punch_activity.xml
+++ b/app/src/main/res/layout/admin_punch_activity.xml
@@ -21,6 +21,7 @@
         android:textSize="30dp" />
 
     <ImageView
+        android:id="@+id/admin_bar_img"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginStart="20dp"
