--- a/app/src/main/res/layout/user_bar_card_list_item.xml
+++ b/app/src/main/res/layout/user_bar_card_list_item.xml
@@ -48,6 +48,13 @@
                 android:layout_gravity="center"
                 android:textSize="20sp"
                 android:text="email"/>
+            <TextView
+                android:id="@+id/user_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:text="phone"/>
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:orientation="horizontal"
